array work and assigning values, not working

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <div class=points>Value so far: </div>
 
     <!-- pictures of crystals-->
-    <img class="gems" src="assets/images/emerald.jpg" height="200px" alt=gems />
-    <img class="gems" src="assets/images/tourmaline.jpg" height="200px" alt=gems />  
-    <img class="gems" src="assets/images/ruby.jpg" height="250px" alt=gems />
-    <img class="gems" src="assets/images/citrine.jpg" height="200px" alt=gems />
+    <img class="gems" id="emerald" src="assets/images/emerald.jpg" height="200px" alt=gems />
+    <img class="gems" id="tourmaline" src="assets/images/tourmaline.jpg" height="200px" alt=gems />  
+    <img class="gems" id="ruby" src="assets/images/ruby.jpg" height="250px" alt=gems />
+    <img class="gems" id="citrine" src="assets/images/citrine.jpg" height="200px" alt=gems />
     
     <!--score keeping -->
     <div class=wins>Wins: </div>
